Updates - Update Kotlin to 1.9.0 - Update Kmongo to 4.10.0 - Update coroutines to 1.7.3 - Update serialization to 1.6.0-RC - Update KSP to 1.9.0-1.0.11 - Bump JDK requirement to 20 - Fix a bug in /fix command causing an exception when trying to re-establish voice connection - Fix support for /redeploy in MusicPlugin - Add support for Loom - Use Loom to call YouTube client - Use IO Dispatcher for Kord and related coroutines